tests/paczka1/fuzzy1/11354343.err
Error in line 1: nz9nvs3cF S506 98,1
Error in line 3: MGcKGWyos A977 18,2
Error in line 10: nz9nvs3cF A394 l1,9
Error in line 6: MGcKGWyos S506 77,6
Error in line 13: MGcKGWyos A977 22,7
Error in line 2: nz9nvs3cF A394 15,9
Error in line 19: j0Tufyd S506 22,33
Error in line 31: hQZtF A336 43,5
Error in line 15: j0Tufyd S506 50,7
Error in line 35: A394 S506 61,2
Error in line 17: MGcKGWyos A336 99,1
